@@ -145,6 +145,8 @@ Tools/Demos
 Tests
 -----
 
+- Issue #9315: Added tests for the trace module.  Patch by Eli Bendersky.
+
 - Issue #9323: Make test.regrtest.__file__ absolute, this was not always the
   case when running profile or trace, for example.
 
@@ -2069,6 +2071,9 @@ Library
 
 - Issue #8235: _socket: Add the constant ``SO_SETFIB``.  SO_SETFIB is a socket
   option available on FreeBSD 7.1 and newer.
+
+- Issue #9315: Fix for the trace module to record correct class name
+  for tracing methods.
 
 Extension Modules
 -----------------
